--- a/blocks/info/info.css
+++ b/blocks/info/info.css
@@ -8,7 +8,7 @@
 .product-description {
   font-size: 0.95rem;
   color: #444;
-  width: 100%;
+  
     
 }
 .add-to-bag {
